added files to ignore

--- a/manuscript_regimes/input_CC/.gitignore
+++ b/manuscript_regimes/input_CC/.gitignore
@@ -46,3 +46,6 @@ without_SA_MV_Raasepori_rsu.csv
 without_SA_MV_Simo_rsu.csv
 without_SA_MV_Vaala_rsu.csv
 without_SA_MV_Voyri_rsu.csv
+CC45_MV_Korsnas_rsu.csv
+CC85_MV_Korsnas_rsu.csv
+without_MV_Korsnas_rsu.csv
