--- a/manuscript_regimes/input_CC/.gitignore
+++ b/manuscript_regimes/input_CC/.gitignore
@@ -52,3 +52,9 @@ without_MV_Korsnas_rsu.csv
 df_raster_Korsnas.csv
 df_raster_Raasepori.csv
 df_raster_Simo.csv
+CC45_MV_Raasepori_rsu.csv
+CC45_MV_Simo_rsu.csv
+CC85_MV_Raasepori_rsu.csv
+CC85_MV_Simo_rsu.csv
+without_MV_Raasepori_rsu.csv
+without_MV_Simo_rsu.csv
